add new sections

--- a/src/index.html
+++ b/src/index.html
@@ -412,6 +412,62 @@
                     <div class="descr">Это нереляционная база данных, которая будет хранить данные вашего сайта или приложения</div>
                 </div>
             </div>
+            <div class="expirience">
+                <div class="expirience__item">
+                    <div class="expirience__item-head">
+                        <div class="title title_fs14">Создание сайтов</div>
+                        <div class="percent">100%</div>
+                    </div>
+                    <div class="scale">
+                        <div class="scale__fill"></div>
+                    </div>
+                </div>
+                <div class="expirience__item">
+                    <div class="expirience__item-head">
+                        <div class="title title_fs14">Создание приложений</div>
+                        <div class="percent">85%</div>
+                    </div>
+                    <div class="scale">
+                        <div class="scale__fill"></div>
+                    </div>
+                </div>
+                <div class="expirience__item">
+                    <div class="expirience__item-head">
+                        <div class="title title_fs14">Работа с данными</div>
+                        <div class="percent">90%</div>
+                    </div>
+                    <div class="scale">
+                        <div class="scale__fill"></div>
+                    </div>
+                </div>
+                <div class="expirience__item">
+                    <div class="expirience__item-head">
+                        <div class="title title_fs14">Креативность</div>
+                        <div class="percent">75%</div>
+                    </div>
+                    <div class="scale">
+                        <div class="scale__fill"></div>
+                    </div>
+                </div>
+                <div class="expirience__item">
+                    <div class="expirience__item-head">
+                        <div class="title title_fs14">Создание дизайна</div>
+                        <div class="percent">90%</div>
+                    </div>
+                    <div class="scale">
+                        <div class="scale__fill"></div>
+                    </div>
+                </div>
+                <div class="expirience__item">
+                    <div class="expirience__item-head">
+                        <div class="title title_fs14">Soft skills</div>
+                        <div class="percent">95%</div>
+                    </div>
+                    <div class="scale">
+                        <div class="scale__fill"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
