--- a/src/index.html
+++ b/src/index.html
@@ -564,7 +564,7 @@
                             </svg></a>
                     </div>
                     <div class="title title_fs14 contacts__text">
-                        Или оставьте ваши данные и я сама вам напишу:
+                        Или оставьте ваши данные и я сама Вам напишу:
                     </div>
                     <form action="#" class="contacts__form">
                         <div class="contacts__input">
